Created MoviePosterAdapter class and successfully wired up Recycler view.  Picasso dependencies added and images load in recyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+
+    <string name="error_url_creation">There was an error constructing the Movies URL.</string>
 </resources>
