Added menu action button to switch between popular and high rated movies.  Set target width of pictures in recyclerview to 1/3 size of screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Popular Movies</string>
 
     <string name="error_url_creation">There was an error constructing the Movies URL.</string>
+
+    <string name="popular">By Popularity</string>
+    <string name="rating">By Rating</string>
+
 </resources>
