Finished Layout for MovieDetailsActivity (removed scrollview).  Added DateUtil class to format the date string retrieved from tmdb.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Popular Movies</string>
 
-    <string name="error_url_creation">There was an error constructing the Movies URL.</string>
+    <string name="error_retrieve_data">There was an error retrieving data from the server.</string>
 
     <string name="popular">By Popularity</string>
     <string name="rating">By Rating</string>
