--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="popular">By Popularity</string>
     <string name="rating">By Rating</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--Labels-->
+    <string name="videos">Videos</string>
+    <string name="reviews">Reviews</string>
+    <string name="error">Error</string>
 
 </resources>
