Added ContentProvider, Contract and DBHelper for Favorites. Can query and insert, however having issue with inserting movie_id

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="videos">Videos</string>
     <string name="reviews">Reviews</string>
     <string name="error">Error</string>
+    <string name="favorite">Favorite</string>
 
 </resources>
